Bug 1501101 - Fix text contrast on buttons in multimessageview's header. r=Paenglab

--- a/mail/themes/linux/mail/multimessageview.css
+++ b/mail/themes/linux/mail/multimessageview.css
@@ -38,7 +38,7 @@
 
 .toolbarbutton-1.msgHeaderView-button {
   background: -moz-Dialog;
-  color: -moz-DialogText;
+  color: -moz-DialogText !important;
 }
 
 .toolbarbutton-1.msgHeaderView-button:not([disabled=true]):not([checked=true]):not([open]):not(:active):hover {
